--- a/bananatree/bananatree.vcxproj
+++ b/bananatree/bananatree.vcxproj
@@ -86,6 +86,7 @@
     <ClCompile Include="src\editor_layer.cpp" />
     <ClCompile Include="src\imgui_layer.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\panels\log_panel.cpp" />
     <ClCompile Include="src\panels\panel.cpp" />
     <ClCompile Include="src\panels\scene_hierarchy_panel.cpp" />
     <ClCompile Include="src\panels\viewport_panel.cpp" />
@@ -94,6 +95,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="src\editor_layer.h" />
     <ClInclude Include="src\imgui_layer.h" />
+    <ClInclude Include="src\panels\log_panel.h" />
     <ClInclude Include="src\panels\panel.h" />
     <ClInclude Include="src\panels\scene_hierarchy_panel.h" />
     <ClInclude Include="src\panels\viewport_panel.h" />
