--- a/bananatree/bananatree.vcxproj
+++ b/bananatree/bananatree.vcxproj
@@ -87,6 +87,7 @@
     <ClCompile Include="src\imgui_layer.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\panels\log_panel.cpp" />
+    <ClCompile Include="src\panels\model_registry_panel.cpp" />
     <ClCompile Include="src\panels\panel.cpp" />
     <ClCompile Include="src\panels\property_editor_panel.cpp" />
     <ClCompile Include="src\panels\scene_hierarchy_panel.cpp" />
@@ -98,6 +99,7 @@
     <ClInclude Include="src\editor_layer.h" />
     <ClInclude Include="src\imgui_layer.h" />
     <ClInclude Include="src\panels\log_panel.h" />
+    <ClInclude Include="src\panels\model_registry_panel.h" />
     <ClInclude Include="src\panels\panel.h" />
     <ClInclude Include="src\panels\property_editor_panel.h" />
     <ClInclude Include="src\panels\scene_hierarchy_panel.h" />
