--- a/thebanana/thebanana.vcxproj.filters
+++ b/thebanana/thebanana.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClCompile Include="src\components\animation_component.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\components\camera_component.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -302,6 +305,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\pch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\components\camera_component.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
