add project editor panel

--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -102,6 +102,12 @@ Pos=60,60
 Size=370,208
 Collapsed=0
 
+[Window][Project editor]
+Pos=2714,24
+Size=726,1353
+Collapsed=0
+DockId=0x0000000C,2
+
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Pos=0,42 Size=3440,1358 Split=Y
   DockNode        ID=0x00000001 Parent=0x3BC79352 SizeRef=3440,628 Split=Y
@@ -116,5 +122,5 @@ DockSpace         ID=0xA0D3CDBE Window=0x9F65601B Pos=0,47 Size=3440,1353 Split=
       DockNode    ID=0x00000007 Parent=0x0000000F SizeRef=784,272 Split=Y Selected=0x995B0CF8
         DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=2230,1187 CentralNode=1 Selected=0x995B0CF8
         DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=2230,164 Selected=0xB7722E25
-  DockNode        ID=0x0000000C Parent=0xA0D3CDBE SizeRef=726,1358 Selected=0x27CF05AC
+  DockNode        ID=0x0000000C Parent=0xA0D3CDBE SizeRef=726,1358 Selected=0x0C11C2EA
 
