--- a/bananatree/bananatree.vcxproj
+++ b/bananatree/bananatree.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="src\panels\log_panel.cpp" />
     <ClCompile Include="src\panels\model_registry_panel.cpp" />
     <ClCompile Include="src\panels\panel.cpp" />
+    <ClCompile Include="src\panels\project_editor_panel.cpp" />
     <ClCompile Include="src\panels\property_editor_panel.cpp" />
     <ClCompile Include="src\panels\scene_hierarchy_panel.cpp" />
     <ClCompile Include="src\panels\viewport_panel.cpp" />
@@ -102,6 +103,7 @@
     <ClInclude Include="src\panels\log_panel.h" />
     <ClInclude Include="src\panels\model_registry_panel.h" />
     <ClInclude Include="src\panels\panel.h" />
+    <ClInclude Include="src\panels\project_editor_panel.h" />
     <ClInclude Include="src\panels\property_editor_panel.h" />
     <ClInclude Include="src\panels\scene_hierarchy_panel.h" />
     <ClInclude Include="src\panels\viewport_panel.h" />
