--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -47,7 +47,7 @@ Collapsed=0
 
 [Window][banana tree editor]
 Pos=0,0
-Size=3440,1377
+Size=784,561
 Collapsed=0
 
 [Window][viewport]
@@ -57,26 +57,26 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Viewport]
-Pos=545,24
-Size=2167,1126
+Pos=309,24
+Size=308,310
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=543,1353
+Size=307,537
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Log]
-Pos=545,1152
-Size=2167,225
+Pos=309,336
+Size=308,225
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Property Editor]
-Pos=2714,24
-Size=726,1353
+Pos=619,24
+Size=165,537
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -86,8 +86,8 @@ Size=872,679
 Collapsed=0
 
 [Window][Model registry]
-Pos=2714,24
-Size=726,1353
+Pos=619,24
+Size=165,537
 Collapsed=0
 DockId=0x0000000C,1
 
@@ -102,8 +102,8 @@ Size=370,208
 Collapsed=0
 
 [Window][Project editor]
-Pos=2714,24
-Size=726,1353
+Pos=619,24
+Size=165,537
 Collapsed=0
 DockId=0x0000000C,2
 
@@ -113,7 +113,7 @@ DockSpace         ID=0x3BC79352 Pos=0,42 Size=3440,1358 Split=Y
     DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=784,271 CentralNode=1 Selected=0xE927CF2F
     DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=784,269 Selected=0xBF126D42
   DockNode        ID=0x00000002 Parent=0x3BC79352 SizeRef=3440,728 Selected=0x46B5E99C
-DockSpace         ID=0xA0D3CDBE Window=0x9F65601B Pos=0,47 Size=3440,1353 Split=X Selected=0x602D6EAE
+DockSpace         ID=0xA0D3CDBE Window=0x9F65601B Pos=60,107 Size=784,537 Split=X Selected=0x602D6EAE
   DockNode        ID=0x0000000A Parent=0xA0D3CDBE SizeRef=2712,1358 Split=X
     DockNode      ID=0x0000000E Parent=0x0000000A SizeRef=543,1358 Selected=0x9A68760C
     DockNode      ID=0x0000000F Parent=0x0000000A SizeRef=2167,1358 Split=Y
@@ -121,5 +121,5 @@ DockSpace         ID=0xA0D3CDBE Window=0x9F65601B Pos=0,47 Size=3440,1353 Split=
       DockNode    ID=0x00000007 Parent=0x0000000F SizeRef=784,272 Split=Y Selected=0x995B0CF8
         DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=2230,1126 CentralNode=1 Selected=0x995B0CF8
         DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=2230,225 Selected=0xB7722E25
-  DockNode        ID=0x0000000C Parent=0xA0D3CDBE SizeRef=726,1358 Selected=0x0C11C2EA
+  DockNode        ID=0x0000000C Parent=0xA0D3CDBE SizeRef=726,1358 Selected=0x27CF05AC
 
