add context menu to objects (theres a heap corruption error but i dont know how to resolve it)

--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -97,7 +97,7 @@ Size=358,234
 Collapsed=0
 
 [Window][Create static mesh]
-Pos=60,60
+Pos=191,256
 Size=370,208
 Collapsed=0
 
@@ -121,5 +121,5 @@ DockSpace         ID=0xA0D3CDBE Window=0x9F65601B Pos=60,107 Size=784,537 Split=
       DockNode    ID=0x00000007 Parent=0x0000000F SizeRef=784,272 Split=Y Selected=0x995B0CF8
         DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=2230,1126 CentralNode=1 Selected=0x995B0CF8
         DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=2230,225 Selected=0xB7722E25
-  DockNode        ID=0x0000000C Parent=0xA0D3CDBE SizeRef=726,1358 Selected=0x27CF05AC
+  DockNode        ID=0x0000000C Parent=0xA0D3CDBE SizeRef=726,1358 Selected=0x0C11C2EA
 
