fix some wack heap error and fix scene hierarchy object context menus

--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -107,13 +107,23 @@ Size=165,537
 Collapsed=0
 DockId=0x0000000C,2
 
+[Window][Add static mesh to scene]
+Pos=60,60
+Size=261,92
+Collapsed=0
+
+[Window][Add static mesh to gameobject 7732619232]
+Pos=60,60
+Size=331,92
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Pos=0,42 Size=3440,1358 Split=Y
   DockNode        ID=0x00000001 Parent=0x3BC79352 SizeRef=3440,628 Split=Y
     DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=784,271 CentralNode=1 Selected=0xE927CF2F
     DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=784,269 Selected=0xBF126D42
   DockNode        ID=0x00000002 Parent=0x3BC79352 SizeRef=3440,728 Selected=0x46B5E99C
-DockSpace         ID=0xA0D3CDBE Window=0x9F65601B Pos=60,107 Size=784,537 Split=X Selected=0x602D6EAE
+DockSpace         ID=0xA0D3CDBE Window=0x9F65601B Pos=268,315 Size=784,537 Split=X Selected=0x602D6EAE
   DockNode        ID=0x0000000A Parent=0xA0D3CDBE SizeRef=2712,1358 Split=X
     DockNode      ID=0x0000000E Parent=0x0000000A SizeRef=543,1358 Selected=0x9A68760C
     DockNode      ID=0x0000000F Parent=0x0000000A SizeRef=2167,1358 Split=Y
