--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -47,7 +47,7 @@ Collapsed=0
 
 [Window][banana tree editor]
 Pos=0,0
-Size=784,561
+Size=3440,1377
 Collapsed=0
 
 [Window][viewport]
@@ -57,37 +57,37 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Viewport]
-Pos=309,24
-Size=308,310
+Pos=545,24
+Size=2167,1126
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=307,537
+Size=543,1353
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Log]
-Pos=309,336
-Size=308,225
+Pos=545,1152
+Size=2167,225
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Property Editor]
-Pos=619,24
-Size=165,537
+Pos=2714,24
+Size=726,1353
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Transform menu]
-Pos=1527,281
+Pos=1030,215
 Size=872,679
 Collapsed=0
 
 [Window][Model registry]
-Pos=619,24
-Size=165,537
+Pos=2714,24
+Size=726,1353
 Collapsed=0
 DockId=0x0000000C,1
 
@@ -102,13 +102,13 @@ Size=370,208
 Collapsed=0
 
 [Window][Project editor]
-Pos=619,24
-Size=165,537
+Pos=2714,24
+Size=726,1353
 Collapsed=0
 DockId=0x0000000C,2
 
 [Window][Add static mesh to scene]
-Pos=60,60
+Pos=-182,-182
 Size=261,92
 Collapsed=0
 
@@ -117,13 +117,18 @@ Pos=60,60
 Size=331,92
 Collapsed=0
 
+[Window][Add static mesh to gameobject]
+Pos=-182,-182
+Size=275,92
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Pos=0,42 Size=3440,1358 Split=Y
   DockNode        ID=0x00000001 Parent=0x3BC79352 SizeRef=3440,628 Split=Y
     DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=784,271 CentralNode=1 Selected=0xE927CF2F
     DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=784,269 Selected=0xBF126D42
   DockNode        ID=0x00000002 Parent=0x3BC79352 SizeRef=3440,728 Selected=0x46B5E99C
-DockSpace         ID=0xA0D3CDBE Window=0x9F65601B Pos=268,315 Size=784,537 Split=X Selected=0x602D6EAE
+DockSpace         ID=0xA0D3CDBE Window=0x9F65601B Pos=0,47 Size=3440,1353 Split=X Selected=0x602D6EAE
   DockNode        ID=0x0000000A Parent=0xA0D3CDBE SizeRef=2712,1358 Split=X
     DockNode      ID=0x0000000E Parent=0x0000000A SizeRef=543,1358 Selected=0x9A68760C
     DockNode      ID=0x0000000F Parent=0x0000000A SizeRef=2167,1358 Split=Y
@@ -131,5 +136,5 @@ DockSpace         ID=0xA0D3CDBE Window=0x9F65601B Pos=268,315 Size=784,537 Split
       DockNode    ID=0x00000007 Parent=0x0000000F SizeRef=784,272 Split=Y Selected=0x995B0CF8
         DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=2230,1126 CentralNode=1 Selected=0x995B0CF8
         DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=2230,225 Selected=0xB7722E25
-  DockNode        ID=0x0000000C Parent=0xA0D3CDBE SizeRef=726,1358 Selected=0x0C11C2EA
+  DockNode        ID=0x0000000C Parent=0xA0D3CDBE SizeRef=726,1358 Selected=0x27CF05AC
 
