--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -92,7 +92,7 @@ Collapsed=0
 DockId=0x0000000C,1
 
 [Window][Import model]
-Pos=60,60
+Pos=953,372
 Size=358,234
 Collapsed=0
 
@@ -118,7 +118,7 @@ Size=331,92
 Collapsed=0
 
 [Window][Add static mesh to gameobject]
-Pos=-182,-182
+Pos=246,182
 Size=275,92
 Collapsed=0
 
@@ -136,5 +136,5 @@ DockSpace         ID=0xA0D3CDBE Window=0x9F65601B Pos=0,47 Size=3440,1353 Split=
       DockNode    ID=0x00000007 Parent=0x0000000F SizeRef=784,272 Split=Y Selected=0x995B0CF8
         DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=2230,1126 CentralNode=1 Selected=0x995B0CF8
         DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=2230,225 Selected=0xB7722E25
-  DockNode        ID=0x0000000C Parent=0xA0D3CDBE SizeRef=726,1358 Selected=0x27CF05AC
+  DockNode        ID=0x0000000C Parent=0xA0D3CDBE SizeRef=726,1358 Selected=0x0C11C2EA
 
