--- a/bananatree/bananatree.vcxproj
+++ b/bananatree/bananatree.vcxproj
@@ -98,6 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
+    <ClInclude Include="src\editorconfig.h" />
     <ClInclude Include="src\editor_layer.h" />
     <ClInclude Include="src\imgui_layer.h" />
     <ClInclude Include="src\panels\log_panel.h" />
