--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -7,7 +7,6 @@ Collapsed=0
 Pos=0,19
 Size=3440,628
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][test panel]
 Pos=60,60
@@ -27,13 +26,11 @@ Collapsed=0
 Pos=0,292
 Size=784,269
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Example: Console]
 Pos=0,649
 Size=3440,728
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][Example: Simple layout]
 Pos=653,247
@@ -46,39 +43,37 @@ Size=420,391
 Collapsed=0
 
 [Window][banana tree editor]
-Pos=0,0
-Size=3440,1377
+Size=1584,861
 Collapsed=0
 
 [Window][viewport]
 Pos=0,19
 Size=784,268
 Collapsed=0
-DockId=0x00000006,0
 
 [Window][Viewport]
-Pos=545,24
-Size=2167,1126
+ViewportPos=895,289
+ViewportId=0x995B0CF8
+Size=2140,1191
 Collapsed=0
-DockId=0x00000005,0
 
 [Window][Scene Hierarchy]
-Pos=0,24
-Size=543,1353
+ViewportPos=242,289
+ViewportId=0x9A68760C
+Size=651,1353
 Collapsed=0
-DockId=0x0000000E,0
 
 [Window][Log]
-Pos=545,1152
-Size=2167,225
+ViewportPos=255,282
+ViewportId=0xB7722E25
+Size=2140,160
 Collapsed=0
-DockId=0x00000008,0
 
 [Window][Property Editor]
-Pos=2714,24
-Size=726,1353
+ViewportPos=3037,289
+ViewportId=0x27CF05AC
+Size=645,1353
 Collapsed=0
-DockId=0x0000000C,0
 
 [Window][Transform menu]
 Pos=1799,504
@@ -86,13 +81,13 @@ Size=872,679
 Collapsed=0
 
 [Window][Model registry]
-Pos=2714,24
-Size=726,1353
+ViewportPos=3037,289
+ViewportId=0xE50C3835
+Size=645,1353
 Collapsed=0
-DockId=0x0000000C,1
 
 [Window][Import model]
-Pos=953,372
+Pos=948,369
 Size=358,234
 Collapsed=0
 
@@ -102,10 +97,10 @@ Size=370,208
 Collapsed=0
 
 [Window][Project editor]
-Pos=2714,24
-Size=726,1353
+ViewportPos=3037,289
+ViewportId=0x0C11C2EA
+Size=645,1353
 Collapsed=0
-DockId=0x0000000C,2
 
 [Window][Add static mesh to scene]
 Pos=-182,-182
@@ -122,19 +117,23 @@ Pos=246,182
 Size=275,92
 Collapsed=0
 
-[Docking][Data]
-DockSpace         ID=0x3BC79352 Pos=0,42 Size=3440,1358 Split=Y
-  DockNode        ID=0x00000001 Parent=0x3BC79352 SizeRef=3440,628 Split=Y
-    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=784,271 CentralNode=1 Selected=0xE927CF2F
-    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=784,269 Selected=0xBF126D42
-  DockNode        ID=0x00000002 Parent=0x3BC79352 SizeRef=3440,728 Selected=0x46B5E99C
-DockSpace         ID=0xA0D3CDBE Window=0x9F65601B Pos=0,47 Size=3440,1353 Split=X Selected=0x602D6EAE
-  DockNode        ID=0x0000000A Parent=0xA0D3CDBE SizeRef=2712,1358 Split=X
-    DockNode      ID=0x0000000E Parent=0x0000000A SizeRef=543,1358 Selected=0x9A68760C
-    DockNode      ID=0x0000000F Parent=0x0000000A SizeRef=2167,1358 Split=Y
-      DockNode    ID=0x00000006 Parent=0x0000000F SizeRef=784,268 Selected=0x602D6EAE
-      DockNode    ID=0x00000007 Parent=0x0000000F SizeRef=784,272 Split=Y Selected=0x995B0CF8
-        DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=2230,1126 CentralNode=1 Selected=0x995B0CF8
-        DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=2230,225 Selected=0xB7722E25
-  DockNode        ID=0x0000000C Parent=0xA0D3CDBE SizeRef=726,1358 Selected=0x0C11C2EA
+[Window][the banana: scene hierarchy]
+Pos=60,60
+Size=336,234
+Collapsed=0
+
+[Window][the banana: debug menu]
+Pos=380,282
+Size=324,151
+Collapsed=0
+
+[Window][the banana: property editor]
+Pos=720,123
+Size=233,194
+Collapsed=0
+
+[Window][the banana: console]
+Pos=306,261
+Size=1030,855
+Collapsed=0
 
