--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -43,7 +43,7 @@ Size=420,391
 Collapsed=0
 
 [Window][banana tree editor]
-Size=1584,861
+Size=3440,1377
 Collapsed=0
 
 [Window][viewport]
@@ -52,27 +52,23 @@ Size=784,268
 Collapsed=0
 
 [Window][Viewport]
-ViewportPos=895,289
-ViewportId=0x995B0CF8
-Size=2140,1191
+Pos=796,24
+Size=1240,1092
 Collapsed=0
 
 [Window][Scene Hierarchy]
-ViewportPos=242,289
-ViewportId=0x9A68760C
-Size=651,1353
+Pos=0,24
+Size=794,1353
 Collapsed=0
 
 [Window][Log]
-ViewportPos=255,282
-ViewportId=0xB7722E25
-Size=2140,160
+Pos=796,1118
+Size=1240,259
 Collapsed=0
 
 [Window][Property Editor]
-ViewportPos=3037,289
-ViewportId=0x27CF05AC
-Size=645,1353
+Pos=2038,24
+Size=1402,1353
 Collapsed=0
 
 [Window][Transform menu]
@@ -81,9 +77,8 @@ Size=872,679
 Collapsed=0
 
 [Window][Model registry]
-ViewportPos=3037,289
-ViewportId=0xE50C3835
-Size=645,1353
+Pos=2038,24
+Size=1402,1353
 Collapsed=0
 
 [Window][Import model]
@@ -97,9 +92,8 @@ Size=370,208
 Collapsed=0
 
 [Window][Project editor]
-ViewportPos=3037,289
-ViewportId=0x0C11C2EA
-Size=645,1353
+Pos=2038,24
+Size=1402,1353
 Collapsed=0
 
 [Window][Add static mesh to scene]
