make most library headers internal-only

--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -43,7 +43,7 @@ Size=420,391
 Collapsed=0
 
 [Window][banana tree editor]
-Size=3440,1377
+Size=1584,861
 Collapsed=0
 
 [Window][viewport]
@@ -52,33 +52,34 @@ Size=784,268
 Collapsed=0
 
 [Window][Viewport]
-Pos=796,24
-Size=1240,1092
+Pos=396,24
+Size=758,576
 Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=794,1353
+Size=394,837
 Collapsed=0
 
 [Window][Log]
-Pos=796,1118
-Size=1240,259
+Pos=396,602
+Size=758,259
 Collapsed=0
 
 [Window][Property Editor]
-Pos=2038,24
-Size=1402,1353
+Pos=1156,24
+Size=428,837
 Collapsed=0
 
 [Window][Transform menu]
-Pos=1799,504
+ViewportPos=1563,362
+ViewportId=0xED300A78
 Size=872,679
 Collapsed=0
 
 [Window][Model registry]
-Pos=2038,24
-Size=1402,1353
+Pos=1156,24
+Size=428,837
 Collapsed=0
 
 [Window][Import model]
@@ -92,8 +93,8 @@ Size=370,208
 Collapsed=0
 
 [Window][Project editor]
-Pos=2038,24
-Size=1402,1353
+Pos=1156,24
+Size=428,837
 Collapsed=0
 
 [Window][Add static mesh to scene]
