add building functionality to editor (msbuild stuff)

--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -43,6 +43,7 @@ Size=420,391
 Collapsed=0
 
 [Window][banana tree editor]
+Pos=0,0
 Size=1584,861
 Collapsed=0
 
@@ -52,24 +53,28 @@ Size=784,268
 Collapsed=0
 
 [Window][Viewport]
-Pos=396,24
-Size=758,576
+Pos=372,24
+Size=782,653
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=394,837
+Size=370,653
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Log]
-Pos=396,602
-Size=758,259
+Pos=0,679
+Size=1584,182
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Property Editor]
 Pos=1156,24
-Size=428,837
+Size=428,653
 Collapsed=0
+DockId=0x00000003,2
 
 [Window][Transform menu]
 ViewportPos=1563,362
@@ -79,8 +84,9 @@ Collapsed=0
 
 [Window][Model registry]
 Pos=1156,24
-Size=428,837
+Size=428,653
 Collapsed=0
+DockId=0x00000003,1
 
 [Window][Import model]
 Pos=948,369
@@ -94,8 +100,9 @@ Collapsed=0
 
 [Window][Project editor]
 Pos=1156,24
-Size=428,837
+Size=428,653
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Add static mesh to scene]
 Pos=-182,-182
@@ -131,4 +138,13 @@ Collapsed=0
 Pos=306,261
 Size=1030,855
 Collapsed=0
+
+[Docking][Data]
+DockSpace       ID=0xA0D3CDBE Window=0x9F65601B Pos=190,237 Size=1584,837 Split=Y
+  DockNode      ID=0x00000005 Parent=0xA0D3CDBE SizeRef=3440,1056 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=393,1353 Selected=0x9A68760C
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=3045,1353 Split=X
+      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=3010,1353 CentralNode=1 Selected=0x995B0CF8
+      DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=428,1353 Selected=0x27CF05AC
+  DockNode      ID=0x00000006 Parent=0xA0D3CDBE SizeRef=3440,295 Selected=0xB7722E25
 
