--- a/thebanana/thebanana.vcxproj
+++ b/thebanana/thebanana.vcxproj
@@ -137,6 +137,7 @@
     </ClCompile>
     <ClCompile Include="src\physics\collider.cpp" />
     <ClCompile Include="src\physics\rigidbody.cpp" />
+    <ClCompile Include="src\script_module.cpp" />
     <ClCompile Include="src\shader_registry.cpp" />
     <ClCompile Include="src\static_mesh.cpp" />
     <ClCompile Include="src\scene.cpp" />
@@ -167,6 +168,7 @@
     <ClInclude Include="include\particlesystem\particlesystem.h" />
     <ClInclude Include="include\particlesystem\particlesystem_component.h" />
     <ClInclude Include="include\particlesystem\particle_component.h" />
+    <ClInclude Include="include\script_module.h" />
     <ClInclude Include="src\internal_only_includelist.h" />
     <ClInclude Include="include\lua_interpreter.h" />
     <ClInclude Include="include\main_module.h" />
