--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -43,6 +43,7 @@ Size=420,391
 Collapsed=0
 
 [Window][banana tree editor]
+Pos=0,0
 Size=1584,861
 Collapsed=0
 
@@ -53,23 +54,26 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=372,24
-Size=782,653
+Size=840,837
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=370,653
+Size=370,837
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Log]
-Pos=0,679
-Size=1584,182
+Pos=0,664
+Size=1584,197
 Collapsed=0
 
 [Window][Property Editor]
-Pos=1156,24
-Size=428,653
+Pos=1214,24
+Size=370,837
 Collapsed=0
+DockId=0x00000003,2
 
 [Window][Transform menu]
 ViewportPos=1563,362
@@ -78,9 +82,10 @@ Size=872,679
 Collapsed=0
 
 [Window][Model registry]
-Pos=1156,24
-Size=428,653
+Pos=1214,24
+Size=370,837
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Import model]
 Pos=948,369
@@ -93,9 +98,10 @@ Size=370,208
 Collapsed=0
 
 [Window][Project editor]
-Pos=1156,24
-Size=428,653
+Pos=1214,24
+Size=370,837
 Collapsed=0
+DockId=0x00000003,1
 
 [Window][Add static mesh to scene]
 Pos=-182,-182
@@ -131,4 +137,11 @@ Collapsed=0
 Pos=232,12
 Size=1030,855
 Collapsed=0
+
+[Docking][Data]
+DockSpace     ID=0xA0D3CDBE Window=0x9F65601B Pos=1182,302 Size=1584,837 Split=X Selected=0x995B0CF8
+  DockNode    ID=0x00000004 Parent=0xA0D3CDBE SizeRef=1212,837 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=370,837 Selected=0x9A68760C
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=840,837 CentralNode=1 Selected=0x995B0CF8
+  DockNode    ID=0x00000003 Parent=0xA0D3CDBE SizeRef=370,837 Selected=0x27CF05AC
 
