--- a/bananatree/bananatree.vcxproj.filters
+++ b/bananatree/bananatree.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="src\editorconfig.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\panels\script_registry_panel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -93,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\editorconfig.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\panels\script_registry_panel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
