--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -54,24 +54,25 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=372,24
-Size=840,837
+Size=840,713
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=370,837
+Size=370,713
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Log]
-Pos=0,664
-Size=1584,197
+Pos=0,739
+Size=1584,122
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Property Editor]
 Pos=1214,24
-Size=370,837
+Size=370,713
 Collapsed=0
 DockId=0x00000003,2
 
@@ -83,7 +84,7 @@ Collapsed=0
 
 [Window][Model registry]
 Pos=1214,24
-Size=370,837
+Size=370,713
 Collapsed=0
 DockId=0x00000003,0
 
@@ -99,7 +100,7 @@ Collapsed=0
 
 [Window][Project editor]
 Pos=1214,24
-Size=370,837
+Size=370,713
 Collapsed=0
 DockId=0x00000003,1
 
@@ -138,10 +139,18 @@ Pos=232,12
 Size=1030,855
 Collapsed=0
 
+[Window][Script registry]
+Pos=0,24
+Size=370,713
+Collapsed=0
+DockId=0x00000001,1
+
 [Docking][Data]
-DockSpace     ID=0xA0D3CDBE Window=0x9F65601B Pos=1182,302 Size=1584,837 Split=X Selected=0x995B0CF8
-  DockNode    ID=0x00000004 Parent=0xA0D3CDBE SizeRef=1212,837 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=370,837 Selected=0x9A68760C
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=840,837 CentralNode=1 Selected=0x995B0CF8
-  DockNode    ID=0x00000003 Parent=0xA0D3CDBE SizeRef=370,837 Selected=0x27CF05AC
+DockSpace       ID=0xA0D3CDBE Window=0x9F65601B Pos=60,107 Size=1584,837 Split=Y Selected=0x995B0CF8
+  DockNode      ID=0x00000005 Parent=0xA0D3CDBE SizeRef=3440,1154 Split=X
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1212,837 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=370,837 Selected=0xFC238FD9
+      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=840,837 CentralNode=1 Selected=0x995B0CF8
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=370,837 Selected=0x27CF05AC
+  DockNode      ID=0x00000006 Parent=0xA0D3CDBE SizeRef=3440,197 Selected=0xB7722E25
 
