fix crashes related to imgui

--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -43,6 +43,7 @@ Size=420,391
 Collapsed=0
 
 [Window][banana tree editor]
+Pos=0,0
 Size=1584,861
 Collapsed=0
 
@@ -53,34 +54,38 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=372,24
-Size=840,713
+Size=840,696
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=370,713
+Size=370,696
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Log]
-Pos=0,739
-Size=1584,122
+Pos=0,722
+Size=1584,139
 Collapsed=0
+DockId=0x00000007,0
 
 [Window][Property Editor]
 Pos=1214,24
-Size=370,713
+Size=370,696
 Collapsed=0
+DockId=0x00000006,2
 
 [Window][Transform menu]
-ViewportPos=1563,362
-ViewportId=0xED300A78
+Pos=2153,429
 Size=872,679
 Collapsed=0
 
 [Window][Model registry]
 Pos=1214,24
-Size=370,713
+Size=370,696
 Collapsed=0
+DockId=0x00000006,1
 
 [Window][Import model]
 Pos=948,369
@@ -94,11 +99,12 @@ Collapsed=0
 
 [Window][Project editor]
 Pos=1214,24
-Size=370,713
+Size=370,696
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Add static mesh to scene]
-Pos=-182,-182
+Pos=444,221
 Size=261,92
 Collapsed=0
 
@@ -134,6 +140,16 @@ Collapsed=0
 
 [Window][Script registry]
 Pos=0,24
-Size=370,713
+Size=370,696
 Collapsed=0
+DockId=0x00000001,1
+
+[Docking][Data]
+DockSpace       ID=0xA0D3CDBE Window=0x9F65601B Pos=476,203 Size=1584,837 Split=Y
+  DockNode      ID=0x00000003 Parent=0xA0D3CDBE SizeRef=1584,696 Split=X
+    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=1212,837 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=370,837 Selected=0xFC238FD9
+      DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=1212,837 CentralNode=1 Selected=0x995B0CF8
+    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=370,837 Selected=0x27CF05AC
+  DockNode      ID=0x00000007 Parent=0xA0D3CDBE SizeRef=1584,139 Selected=0xB7722E25
 
