--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -77,7 +77,8 @@ Collapsed=0
 DockId=0x00000006,2
 
 [Window][Transform menu]
-Pos=2153,429
+ViewportPos=1523,485
+ViewportId=0xED300A78
 Size=872,679
 Collapsed=0
 
@@ -145,11 +146,11 @@ Collapsed=0
 DockId=0x00000001,1
 
 [Docking][Data]
-DockSpace       ID=0xA0D3CDBE Window=0x9F65601B Pos=476,203 Size=1584,837 Split=Y
+DockSpace       ID=0xA0D3CDBE Window=0x9F65601B Pos=138,185 Size=1584,837 Split=Y
   DockNode      ID=0x00000003 Parent=0xA0D3CDBE SizeRef=1584,696 Split=X
     DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=1212,837 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=370,837 Selected=0xFC238FD9
+      DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=370,837 Selected=0x9A68760C
       DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=1212,837 CentralNode=1 Selected=0x995B0CF8
-    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=370,837 Selected=0x27CF05AC
+    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=370,837 Selected=0x0C11C2EA
   DockNode      ID=0x00000007 Parent=0xA0D3CDBE SizeRef=1584,139 Selected=0xB7722E25
 
